<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        tools:context=".clanovi.update.UrediClanaFragment">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/trenutna_ikonaIV"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="24dp"
            android:padding="5dp"
            android:src="@drawable/ic_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/circular"
            app:strokeColor="@color/black_opacity"
            app:strokeWidth="5dp" />

        <EditText
            android:id="@+id/trenutna_ime_edit_text"
            style="@style/edit_text"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:hint="@string/ime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trenutna_ikonaIV" />

        <EditText
            android:id="@+id/trenutna_prezime_edit_text"
            style="@style/edit_text"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:hint="@string/prezime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trenutna_ime_edit_text" />

        <EditText
            android:id="@+id/trenutna_oib_edit_text"
            style="@style/edit_text"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:hint="@string/oib"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trenutna_prezime_edit_text" />

        <EditText
            android:id="@+id/trenutna_rodjendan_edit_text"
            style="@style/edit_text"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:hint="@string/datum_rodjenja"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trenutna_oib_edit_text" />

        <EditText
            android:id="@+id/trenutna_datum_upisa_edit_text"
            style="@style/edit_text"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:hint="@string/datum_uclanjenja"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trenutna_rodjendan_edit_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>